Bug 809478. Handle 90-degree rotations when snapping transformed gradients. r=jrmuizel